// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"msgid "Hello, world!"
msgstr ""
"
`;

exports[` 2`] = `""`;

exports[`translation catalogue continuous filling should add a second entry 1`] = `
"#: src/zulu.ts:2304
msgid "Mike"
msgstr ""

#: src/yankee.ts:42
msgid "November"
msgstr ""
"
`;

exports[`translation catalogue continuous filling should add an entry 1`] = `
"#: src/zulu.ts:2304
msgid "Mike"
msgstr ""
"
`;

exports[`translation catalogue continuous filling should also merge flags and comments 1`] = `
"# This is difficult.
#. TRANSLATORS: Buy me a milk shake!
#: src/zulu.ts:2304 src/xray.ts:1303 sierra.ts:27
#, no-c-format
msgid "Mike"
msgstr ""

#: src/yankee.ts:42
msgid "November"
msgstr ""

#: whiskey.ts:2 victor.ts:3 uniform.ts:4 tango.ts:25
msgid "Lima"
msgstr ""

#: whiskey.ts:2 victor.ts:3 uniform.ts:3 tango.ts:25
msgid "Oscar"
msgstr ""
"
`;

exports[`translation catalogue continuous filling should also merge flags and comments 2`] = `
"# This is difficult.
# Not really.
#. TRANSLATORS: Buy me a milk shake!
#. TRANSLATORS: Drop me a line!
#: src/zulu.ts:2304 src/xray.ts:1303 sierra.ts:27 romeo.ts:85
#, no-c-format, perl-brace-format
msgid "Mike"
msgstr ""

#: src/yankee.ts:42
msgid "November"
msgstr ""

#: whiskey.ts:2 victor.ts:3 uniform.ts:4 tango.ts:25
msgid "Lima"
msgstr ""

#: whiskey.ts:2 victor.ts:3 uniform.ts:3 tango.ts:25
msgid "Oscar"
msgstr ""
"
`;

exports[`translation catalogue continuous filling should also merge flags and comments 3`] = `
TranslationCatalogue {
  "cache": {
    "Foxtrot": {
      "undefined": PoEntry {
        "properties": {
          "msgid": "Foxtrot",
          "references": [
            "src/yankee.ts:42",
            "src/zulu.ts:2304",
          ],
        },
      },
    },
    "Lima": {
      "undefined": PoEntry {
        "properties": {
          "msgid": "Lima",
          "references": [
            "whiskey.ts:2",
            "victor.ts:3",
            "uniform.ts:4",
            "tango.ts:25",
          ],
        },
      },
    },
    "Mike": {
      "audio": PoEntry {
        "properties": {
          "msgctxt": "audio",
          "msgid": "Mike",
          "references": [
            "golf.ts:85",
          ],
        },
      },
      "phonetic alphabet": PoEntry {
        "properties": {
          "msgctxt": "phonetic alphabet",
          "msgid": "Mike",
          "references": [
            "juliet.ts:85",
          ],
        },
      },
      "undefined": PoEntry {
        "properties": {
          "automatic": [
            "TRANSLATORS: Buy me a milk shake!",
            "TRANSLATORS: Drop me a line!",
          ],
          "flags": [
            "no-c-format",
            "perl-brace-format",
          ],
          "msgid": "Mike",
          "references": [
            "src/zulu.ts:2304",
            "src/xray.ts:1303",
            "sierra.ts:27",
            "romeo.ts:85",
          ],
          "translatorComments": [
            "This is difficult.",
            "Not really.",
          ],
        },
      },
    },
    "November": {
      "undefined": PoEntry {
        "properties": {
          "msgid": "November",
          "references": [
            "src/yankee.ts:42",
          ],
        },
      },
    },
    "Oscar": {
      "undefined": PoEntry {
        "properties": {
          "msgid": "Oscar",
          "references": [
            "whiskey.ts:2",
            "victor.ts:3",
            "uniform.ts:3",
            "tango.ts:25",
          ],
        },
      },
    },
  },
  "entries": [
    PoEntry {
      "properties": {
        "automatic": [
          "TRANSLATORS: Buy me a milk shake!",
          "TRANSLATORS: Drop me a line!",
        ],
        "flags": [
          "no-c-format",
          "perl-brace-format",
        ],
        "msgid": "Mike",
        "references": [
          "src/zulu.ts:2304",
          "src/xray.ts:1303",
          "sierra.ts:27",
          "romeo.ts:85",
        ],
        "translatorComments": [
          "This is difficult.",
          "Not really.",
        ],
      },
    },
    PoEntry {
      "properties": {
        "msgid": "November",
        "references": [
          "src/yankee.ts:42",
        ],
      },
    },
    PoEntry {
      "properties": {
        "msgid": "Lima",
        "references": [
          "whiskey.ts:2",
          "victor.ts:3",
          "uniform.ts:4",
          "tango.ts:25",
        ],
      },
    },
    PoEntry {
      "properties": {
        "msgid": "Oscar",
        "references": [
          "whiskey.ts:2",
          "victor.ts:3",
          "uniform.ts:3",
          "tango.ts:25",
        ],
      },
    },
    PoEntry {
      "properties": {
        "msgctxt": "phonetic alphabet",
        "msgid": "Mike",
        "references": [
          "juliet.ts:85",
        ],
      },
    },
    PoEntry {
      "properties": {
        "msgctxt": "audio",
        "msgid": "Mike",
        "references": [
          "golf.ts:85",
        ],
      },
    },
    PoEntry {
      "properties": {
        "msgid": "Foxtrot",
        "references": [
          "src/yankee.ts:42",
          "src/zulu.ts:2304",
        ],
      },
    },
  ],
}
`;

exports[`translation catalogue continuous filling should merge the third entry 1`] = `
"#: src/zulu.ts:2304 src/xray.ts:1303
msgid "Mike"
msgstr ""

#: src/yankee.ts:42
msgid "November"
msgstr ""
"
`;

exports[`translation catalogue continuous filling should sort by file on demand 1`] = `
"#: golf.ts:85
msgctxt "audio"
msgid "Mike"
msgstr ""

#: juliet.ts:85
msgctxt "phonetic alphabet"
msgid "Mike"
msgstr ""

# This is difficult.
# Not really.
#. TRANSLATORS: Buy me a milk shake!
#. TRANSLATORS: Drop me a line!
#: romeo.ts:85 sierra.ts:27 src/xray.ts:1303 src/zulu.ts:2304
#, no-c-format, perl-brace-format
msgid "Mike"
msgstr ""

#: src/yankee.ts:42
msgid "November"
msgstr ""

#: src/yankee.ts:42 src/zulu.ts:2304
msgid "Foxtrot"
msgstr ""

#: tango.ts:25 uniform.ts:3 victor.ts:3 whiskey.ts:2
msgid "Oscar"
msgstr ""

#: tango.ts:25 uniform.ts:4 victor.ts:3 whiskey.ts:2
msgid "Lima"
msgstr ""
"
`;

exports[`translation catalogue continuous filling should sort output on demand 1`] = `
"#: src/yankee.ts:42 src/zulu.ts:2304
msgid "Foxtrot"
msgstr ""

#: whiskey.ts:2 victor.ts:3 uniform.ts:4 tango.ts:25
msgid "Lima"
msgstr ""

# This is difficult.
# Not really.
#. TRANSLATORS: Buy me a milk shake!
#. TRANSLATORS: Drop me a line!
#: src/zulu.ts:2304 src/xray.ts:1303 sierra.ts:27 romeo.ts:85
#, no-c-format, perl-brace-format
msgid "Mike"
msgstr ""

#: golf.ts:85
msgctxt "audio"
msgid "Mike"
msgstr ""

#: juliet.ts:85
msgctxt "phonetic alphabet"
msgid "Mike"
msgstr ""

#: src/yankee.ts:42
msgid "November"
msgstr ""

#: whiskey.ts:2 victor.ts:3 uniform.ts:3 tango.ts:25
msgid "Oscar"
msgstr ""
"
`;

exports[`translation catalogue continuous filling should support a string at many locations 1`] = `
"#: src/zulu.ts:2304 src/xray.ts:1303
msgid "Mike"
msgstr ""

#: src/yankee.ts:42
msgid "November"
msgstr ""

#: whiskey.ts:2 victor.ts:3 uniform.ts:4 tango.ts:25
msgid "Lima"
msgstr ""

#: whiskey.ts:2 victor.ts:3 uniform.ts:3 tango.ts:25
msgid "Oscar"
msgstr ""
"
`;

exports[`translation catalogue sorting should sort by line number 1`] = `
"msgid "golf"
msgstr ""

#: source.ts:1
msgid "delta"
msgstr ""

#: source.ts:3
msgid "bravo"
msgstr ""

#: source.ts:11 source.ts:12
msgid "foxtrot"
msgstr ""

#: source.ts:11 source.ts:13
msgid "echo"
msgstr ""

#: source.ts:31
msgid "charlie"
msgstr ""

#: source.ts:42
msgid "alpha"
msgstr ""
"
`;

exports[`translation catalogue sorting should sort by msgctxt 1`] = `
"msgid "sort"
msgstr ""

msgctxt "alpha"
msgid "sort"
msgstr ""

msgctxt "bravo"
msgid "sort"
msgstr ""

msgctxt "charlie"
msgid "sort"
msgstr ""

msgctxt "delta"
msgid "sort"
msgstr ""
"
`;
